fix overflowing issue

--- a/src/pages/wander/wander-23.module.scss
+++ b/src/pages/wander/wander-23.module.scss
@@ -14,7 +14,7 @@
   }
 
   .Story {
-    height: 100vh;
+    height: 100%;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -22,7 +22,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow-x: clip;
+    overflow: clip hidden;
 
     img {
       width: 20rem;
